src/mock-data/data/samples/06-multi-ns-web-app/06-multi-ns-web-app-01-namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: test-webapp-backend
  labels:
    name: test-webapp-backend

---
kind: Namespace
apiVersion: v1
metadata:
  name: test-webapp-frontend
  labels:
    name: test-webapp-frontend
