src/mock-data/data/samples/06-multi-ns-web-app/06-multi-ns-web-app-02-db.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: db
  namespace: test-webapp-backend
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: nginx
          image: nginx
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
