src/mock-data/data/samples/06-multi-ns-web-app/06-multi-ns-web-app-03-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: test-webapp-backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: nginx
          image: nginx
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
