src/mock-data/data/samples/06-multi-ns-web-app/06-multi-ns-web-app-06-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: test-webapp-backend
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: test-webapp-frontend
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-deny-egress
  namespace: test-webapp-backend
spec:
  podSelector:
    matchLabels: 
      app: db
  policyTypes:
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-egress-allow
  namespace: test-webapp-backend
spec:
  podSelector:
    matchLabels: 
      app: db
  policyTypes:
  - Egress
  egress:
    - to:
      - podSelector:
          matchLabels: 
            app: db
      ports:
        - protocol: TCP
          port: 3306
    - to:
      - namespaceSelector:
          matchLabels:
            name: kube-system
      ports:
      - protocol: UDP
        port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ingress-allow
  namespace: test-webapp-backend
spec:
  podSelector:
    matchLabels: 
      app: db
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            app: backend
      ports:
        - protocol: TCP
          port: 3306

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logger-ingress-allow
  namespace: test-webapp-backend
spec:
  podSelector:
    matchLabels: 
      app: logger
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-ingress-allow
  namespace: test-webapp-backend
spec:
  podSelector:
    matchLabels: 
      app: backend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels: 
            name: test-webapp-frontend
        podSelector:
          matchLabels: 
            app: frontend


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-ingress-allow
  namespace: test-webapp-frontend
spec:
  podSelector:
    matchLabels: 
      app: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: '192.168.1.1/24'
          except: 
            - '192.168.1.1/29'
            - '192.168.1.1/30'
